mix Thymeleaf with Materialize

--- a/bank/src/main/resources/static/Views/main.html
+++ b/bank/src/main/resources/static/Views/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html xmlns:th="http://www.thymeleaf.org" lang="es">
 <head>
     <meta charset="utf-8">
     <title>Dashboard - Main Page</title>
