--- a/bank/src/main/resources/templates/Views/logIn.html
+++ b/bank/src/main/resources/templates/Views/logIn.html
@@ -44,7 +44,7 @@
             <div class="col s12 center-align">
                 <button type="submit" class="btn waves-effect blue tooltipped" data-tooltip="Enter"><i class="material-icons">send</i></button>
                 <br>
-                <a href="">Restore Password</a>
+                <a href="register.html">Register</a>
             </div>
         </form>
     </div>
@@ -54,7 +54,7 @@
 </body>
 </main>
 <!--footer-->
-<footer class="page-footer blue-grey darken-2">
+<footer class="page-footer blue-grey darken-2" >
     <div class="container">
         <div class="row">
             <div class="col l6 s12">
