--- a/bank/src/main/resources/templates/Views/main.html
+++ b/bank/src/main/resources/templates/Views/main.html
@@ -117,7 +117,61 @@
    </header>
     <main>
 
+        <div class="col s12 m12 l12 right" >
+            <div class="card horizontal" >
+                <div class="card-stacked">
+                   <div class="card-content">
+                        <div class="row">
 
+                            <div class="col s12">
+                                <div class="card center-align" >
+                                    <i class="large material-icons">payments</i>
+                                    <div class="card-block">
+                                        <br>
+                                        <a href="your_balance.html" class="card-title center-align">Query Balance</a>
+                                        <br>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col s12">
+                                <div class="card center-align" >
+                                    <i class="large material-icons">local_atm</i>
+                                    <div class="card-block">
+                                        <br>
+                                        <a href="account_transference.html" class="card-title text-center">Account Transference</a>
+                                        <br>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col s12">
+                                <div class="card center-align" >
+                                    <i class="large material-icons">local_atm</i>
+                                    <div class="card-block">
+                                        <br>
+                                        <a href="make_transaction.html" class="card-title text-center">Make a Transaction</a>
+                                        <br>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col s12">
+                                <div class="card center-align" >
+                                    <i class="large material-icons">local_atm</i>
+                                    <div class="card-block">
+                                        <br>
+                                        <a href="" class="card-title text-center">Pay Services</a>
+                                        <br>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
     </main>
