--- a/bank/src/main/resources/templates/Views/main.html
+++ b/bank/src/main/resources/templates/Views/main.html
@@ -116,6 +116,8 @@
     </div>
    </header>
     <main>
+    <div class="main-container">
+     <div class="row">
 
         <div class="col s12 m12 l12 right" >
             <div class="card horizontal" >
@@ -123,7 +125,7 @@
                    <div class="card-content">
                         <div class="row">
 
-                            <div class="col s12">
+                            <div class="col s12 m2 l3">
                                 <div class="card center-align" >
                                     <i class="large material-icons">payments</i>
                                     <div class="card-block">
@@ -134,7 +136,7 @@
                                 </div>
                             </div>
 
-                            <div class="col s12">
+                            <div class="col s12 m2 l3">
                                 <div class="card center-align" >
                                     <i class="large material-icons">local_atm</i>
                                     <div class="card-block">
@@ -145,7 +147,7 @@
                                 </div>
                             </div>
 
-                            <div class="col s12">
+                            <div class="col s12 m2 l3">
                                 <div class="card center-align" >
                                     <i class="large material-icons">local_atm</i>
                                     <div class="card-block">
@@ -156,12 +158,12 @@
                                 </div>
                             </div>
 
-                            <div class="col s12">
+                            <div class="col s12 m2 l3">
                                 <div class="card center-align" >
                                     <i class="large material-icons">local_atm</i>
                                     <div class="card-block">
                                         <br>
-                                        <a href="" class="card-title text-center">Pay Services</a>
+                                        <a href="pay_service.html" class="card-title text-center">Pay Services</a>
                                         <br>
                                     </div>
                                 </div>
@@ -172,8 +174,8 @@
                 </div>
             </div>
         </div>
-
-
+     </div>
+     </div>
     </main>
     <!--Footer-->
     <footer class="page-footer blue-grey ">
