--- a/bank/src/main/resources/templates/Views/make_transaction.html
+++ b/bank/src/main/resources/templates/Views/make_transaction.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
 <head>
     <meta charset="utf-8">
-    <title>Dashboard - Account Transference </title>
+    <title>Dashboard - Make a Transaction </title>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -146,6 +146,9 @@
                                         </div>
                                     </div>
                                 </div>
+
+
+
                             </div>
                         </div>
                     </div>
