--- a/bank/src/main/resources/static/Views/register.html
+++ b/bank/src/main/resources/static/Views/register.html
@@ -25,42 +25,42 @@
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">person</i>
                     <input id="nombres" type="text" name="nombres" class="validate" required/>
-                    <label for="nombres">Nombres</label>
+                    <label for="nombres">Name</label>
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">person</i>
                     <input id="apellidos" type="text" name="apellidos" class="validate" required/>
-                    <label for="apellidos">Apellidos</label>
+                    <label for="apellidos">Surname</label>
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">email</i>
                     <input id="correo" type="email" name="correo" class="validate" required/>
-                    <label for="correo">Correo</label>
+                    <label for="correo">Email</label>
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">person_pin</i>
                     <input id="alias" type="text" name="alias" class="validate" required/>
-                    <label for="alias">Alias</label>
+                    <label for="alias">User</label>
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">security</i>
                     <input id="clave1" type="password" name="clave1" class="validate" required/>
-                    <label for="clave1">Clave</label>
+                    <label for="clave1">Password</label>
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">security</i>
                     <input id="clave2" type="password" name="clave2" class="validate" required/>
-                    <label for="clave2">Confirmar clave</label>
+                    <label for="clave2">Confirm Password</label>
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">location_on</i>
-                    <input id="txtDireccion" type="text" name="txtDireccion" class="validate" required/>
-                    <label for="txtDireccion">Direccion</label>
+                    <input id="txtDireccion" type="text" name="txtDireccion" placeholder="00000000-0" pattern="[0-9]{8}[-][0-9]{1}" oncopy="return false" oncut="return false"  class="validate" required />
+                    <label for="txtDireccion">DNI</label>
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">phone</i>
                     <input id="txtTel" type="text" name="txtTel" class="validate" required/>
-                    <label for="txtTel">Telefono</label>
+                    <label for="txtTel">Phone</label>
                 </div>
             </div>
             <div class="row center-align">
