controller for account

--- a/bank/src/main/resources/static/Views/create_account.html
+++ b/bank/src/main/resources/static/Views/create_account.html
@@ -20,7 +20,7 @@
 
     <br>
     <div class="container">
-        <form method="post" id="accountregister-form">
+        <form method="POST" id="accountregister-form">
             <div class="row">
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">account_balance</i>
@@ -46,7 +46,7 @@
 
             </div>
             <div class="row center-align">
-                <button type="submit" class="loginbutton">Register Account</button>
+                <a onclick="registerAccount()" href="#">Register Account</a>
             </div>
         </form>
     </div>
